--- a/Back_end/Hackathon.EF_Core/Hackathon.EF_Core.csproj
+++ b/Back_end/Hackathon.EF_Core/Hackathon.EF_Core.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Repositories\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.13" />
   </ItemGroup>
 
   <ItemGroup>
