--- a/Back_end/Hackathon.Infrastructure/Hackathon.Infrastructure.csproj
+++ b/Back_end/Hackathon.Infrastructure/Hackathon.Infrastructure.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <PackageReference Include="gmaps-api-net" Version="0.33.0" />
   </ItemGroup>
 
   <ItemGroup>
