--- a/Back_end/Hackathon.Infrastructure/Hackathon.Infrastructure.csproj
+++ b/Back_end/Hackathon.Infrastructure/Hackathon.Infrastructure.csproj
@@ -4,10 +4,12 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>0f3b5f3f-4bbc-41f9-9e42-54bd7892a94e</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="gmaps-api-net" Version="0.33.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
