--- a/Back_end/Hackathon.API/appsettings.Development.json
+++ b/Back_end/Hackathon.API/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ApiKey": "AIzaSyBP70Yds30-0rELR1lplMl1Pv3IR8Zut6g"
 }
