--- a/Back_end/Hackathon.API/appsettings.json
+++ b/Back_end/Hackathon.API/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ApiKey": "AIzaSyBP70Yds30-0rELR1lplMl1Pv3IR8Zut6g",
   "AllowedHosts": "*"
 }
