--- a/Back_end/Hackathon.Infrastructure/Hackathon.Infrastructure.csproj
+++ b/Back_end/Hackathon.Infrastructure/Hackathon.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="gmaps-api-net" Version="0.33.0" />
+    <PackageReference Include="GoogleApi" Version="5.2.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
   </ItemGroup>
 
